# poise-i18n

./: .gitignore  Cargo.toml  README.md  devenv.nix
src/: lib.rs
