[package]
name = "poise-i18n"
version = "0.1.0"
edition = "2021"
description = "An i18n library to be used with Poise, the Discord bot framework."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.12.1"
itertools = "0.12.0"
poise = "0.5.7"
rusty18n = { version = "0.1.1", features = ["bevy_reflect"] }
strum = { version = "0.25.0", features = ["derive"] }
